# vibe-ipd

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.zh.md  VERSION_BUMP.md  pyproject.toml  vipd
.claude/skills/: vipd-agent-assign-assign.md  vipd-agent-assign-execute.md  vipd-agent-assign-validate.md
.claude/templates/: probe-template.js  report-template.html  workflow-template.js
.github/workflows/: release.yml
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/gates/: tr-criteria.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: cbb-catalog.md  constitution.md  gate-history.jsonl  gate-status.json
.specify/templates/: checklist-template.md  constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/tests/: _test_helpers.ps1  test-check-cycles.Tests.ps1  test-criteria-config.Tests.ps1  test-gate-check-phase-scope.Tests.ps1  test-gate-conditional-pass.Tests.ps1
.specify/workflows/: workflow-registry.json
.vipd/: bump_version.sh  load_strings.sh  mode.ps1  mode.sh  resolve_language.sh  version.yml
docs/: IPD与敏捷开发深度融合的软件产品开发流程与研发管理平台搭建指南.md  README.md  docfx.json  index.md  installation.md  quickstart.md  upgrade.md
docs/community/: extensions.md  friends.md  overview.md  presets.md  walkthroughs.md
docs/concepts/: sdd.md
docs/install/: air-gapped.md  one-time.md  pipx.md  uv.md
docs/ipd-transformation/: 01-transformation-roadmap.md  02-command-template-redesign-guide.md  03-tooling-integration-blueprint.md  04-role-mapping-pdt-setup-guide.md  CONTRIBUTING.md  README.md  glossary.md  product-trio-workflow.md
docs/reference/: authentication.md  core.md  extensions.md  integrations.md  overview.md  presets.md  workflows.md
docs/zh/: installation.md  quickstart.md
extensions/: EXTENSION-DEVELOPMENT-GUIDE.md  EXTENSION-USER-GUIDE.md  RFC-EXTENSION-SYSTEM.md
extensions/agent-assign/: extension.yml
extensions/agent-context/: extension.yml
extensions/bug/: extension.yml
extensions/git/: extension.yml  git-config.yml
lang/: en.yml  zh.yml
presets/lean/: preset.yml
presets/scaffold/: preset.yml
presets/self-test/: preset.yml
samples/e2e-validate-hello/: README.md  hello.sh
specs/001-ipd-toolkit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ipd-agent-pm-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-blueprint-docstate-only/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vipd-command-prefix/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-implement-ipd-gates/: spec.md
specs/006-implement-docstate-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-pdt-role-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-cli-ipd-adaptation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-ipd-migration-gaps/: agent-assignments.yml  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-e2e-workflow-validation/: plan.md  (+6 more)
tests/: conftest.py  test_language_config.py  test_language_override.py  test_language_resolution.py  test_self_upgrade_detection.py  test_self_upgrade_execution.py  test_self_upgrade_guidance.py  test_self_upgrade_verification.py
(+229 files in other folders)
